--- a/front-end/package.json
+++ b/front-end/package.json
@@ -28,6 +28,7 @@
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.2",
     "styled-components": "^5.3.11",
+    "sweetpagination": "^1.0.15",
     "Validator": "^1.1.4",
     "web-vitals": "^2.1.4"
   },
