--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
   },
   "homepage": "https://github.com/NicolasMufamadi/employMe#readme",
   "dependencies": {
-    "axios": "^1.4.0",
+    "axios": "^1.6.8",
     "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
+    "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.21",
     "pg": "^8.10.0",
     "postgres": "^3.3.4",
