--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.21",
+    "otp-generator": "^4.0.1",
     "pg": "^8.10.0",
     "postgres": "^3.3.4",
     "validator": "^13.9.0"
